fixed spacing
label was not spaced evenly between the input box.

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,8 @@ p {
 }
 
 label { 
-    
+    position: relative;
+    top: 5px;
 }
 
 .convert{ 
@@ -31,4 +32,5 @@ label {
 .temp-input{
     text-align: center;
     padding: 10px;
+    margin-top: -10px;
 }
